added list elements in header and logo placeholder
Co-authored-by: Seqahhh <Seqahhh@users.noreply.github.com>
Co-authored-by: ArnieAK <ArnieAK@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
-    <title>Matematisk Moddelering</title>
+    <title>Matematisk Modelering</title>
 </head>
+<header><h1>OSLOMET LOGO PLACEHOLDER</h1>
+    <nav>
+        <ul>
+            <a href="Studier">Studier</ul></a>
+            <a href="Forskningen vår">Forskningen vår</a>
+            <a href="Samarbeid">Samarbeid</a>
+            <a href="Universitetsbibliotek">Universitetsbibliotek</a>
+            <a href="Om Oslomet">Om Oslomet</a>
+            <a href="Kontakt">Kontakt</a>
+            <a href="For studenter">For studenter</a>
+            </nav>   
+        </ul> 
+    </nav>
+    </header>
+</header>
+<nav> 
 
+</nav>
 <body>
-
+    <section> 
+        <h1>Matematisk modellering og datavitenskap – ingeniør </h1>
+        <h2>Bachelorprogram </h2>
+        
+    </section>
 </body>
 
 </html>
