--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet/style.css">
     <title>Matematisk Modelering</title>
 </head>
-<header><h1>OSLOMET LOGO PLACEHOLDER</h1>
+<header><h1><img src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo"></h1>
     <nav>
         <ul>
             <a href="Studier">Studier</ul></a>
