--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header><h1><img src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo"></h1>
     <nav>
         <ul>
-            <a href="Studier">Studier</ul></a>
+            <a href="Studier">Studier</a>
             <a href="Forskningen vår">Forskningen vår</a>
             <a href="Samarbeid">Samarbeid</a>
             <a href="Universitetsbibliotek">Universitetsbibliotek</a>
