--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <section>
-        <h1>Matematisk modellering og datavitenskap – ingeniør </h1>
+        <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram </h2>
 
     </section>
