--- a/index.html
+++ b/index.html
@@ -23,11 +23,33 @@
 </header>
 
 <body>
-    <section>
+    <article>
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram </h2>
-
-    </section>
+        <section> 
+            <div>
+                <p><h3>Studiested: </h3>Pilestredet i Oslo</p>
+            </div>
+            <div>
+                <p><h3>Varighet: </h3>3 år</p>
+            </div>
+            <div>
+                <p><h3>Omfang: </h3>Heltid</p>
+            </div>
+            <div>
+                <p><h3>Studiepoeng: </h3>180</p>
+            </div>
+            <div>
+                <p><h3>Studiestart: </h3>August</p>
+            </div>
+            <div>
+                <p><h3>Undervisningsspråk: </h3>Norsk Engelsk</p>
+            </div>
+            <div>
+                <p><h3>Studieplasser: </h3> 40 </p>
+            </div>
+        </section>
+    </article>
 </body>
 
 </html>
