satte id course-info på article, og endret til display: flex

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </header>
 
 <body>
-    <article>
+    <article id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram </h2>
-        <section> 
+        <section id="course-info"> 
             <div>
                 <p><h3>Studiested: </h3>Pilestredet i Oslo</p>
             </div>
