endret på main content struktur

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <body>
-    <article id="main-content">
+    <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram </h2>
         <section id="course-info"> 
