changed look of nav, fixed spelling, added scalable borders to make site more scalable

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="stylesheet/style.css">
     <title>Matematisk Modelering</title>
 </head>
-<header><img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
+<header>
+<!-- im-container simply puts the img above the navigation elements so .nav is centered on page. -->
+<div class="img-container"> 
+        <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
+    </div>
     <nav>
-        <ul>
-            <a href="Studier">Studier</a>
-            <a href="Forskningen vår">Forskningen vår</a>
-            <a href="Samarbeid">Samarbeid</a>
-            <a href="Universitetsbibliotek">Universitetsbibliotek</a>
-            <a href="Om Oslomet">Om Oslomet</a>
-            <a href="Kontakt">Kontakt</a>
-            <a href="For studenter">For studenter</a>
-    </ul>
+        <ul class="nav-links">
+            <li><a href="Studier">Studier</a></li>
+            <li><a href="Forskningen vår">Forskningen vår</a></li>
+            <li><a href="Samarbeid">Samarbeid</a></li>
+            <li><a href="Universitetsbibliotek">Universitetsbibliotek</a></li>
+            <li><a href="Om Oslomet">Om Oslomet</a></li>
+            <li><a href="Kontakt">Kontakt</a></li>
+            <li><a href="For studenter">For studenter</a></li>
+        </ul>
     </nav>
 </header>
 
@@ -25,30 +29,37 @@
     <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram </h2>
-        <section id="course-info"> 
-            <div>
-                <p><h3>Studiested: </h3>Pilestredet i Oslo</p>
+        <section id="course-info">
+            <div class="detail-box">
+                <p>
+                <h3>Studiested: </h3>Pilestredet i Oslo</p>
             </div>
-            <div>
-                <p><h3>Varighet: </h3>3 år</p>
+            <div class="detail-box">
+                <p>
+                <h3>Varighet: </h3>3 år</p>
             </div>
-            <div>
-                <p><h3>Omfang: </h3>Heltid</p>
+            <div class="detail-box">
+                <p>
+                <h3>Omfang: </h3>Heltid</p>
             </div>
-            <div>
-                <p><h3>Studiepoeng: </h3>180</p>
+            <div class="detail-box">
+                <p>
+                <h3>Studiepoeng: </h3>180</p>
             </div>
-            <div>
-                <p><h3>Studiestart: </h3>August</p>
+            <div class="detail-box">
+                <p>
+                <h3>Studiestart: </h3>August</p>
             </div>
-            <div>
-                <p><h3>Undervisningsspråk: </h3>Norsk Engelsk</p>
+            <div class="detail-box">
+                <p>
+                <h3>Undervisningsspråk: </h3>Norsk, Engelsk</p>
             </div>
-            <div>
-                <p><h3>Studieplasser: </h3> 40 </p>
+            <div class="detail-box">
+                <p>
+                <h3>Studieplasser: </h3> 40 </p>
             </div>
         </section>
-    </article>
+        </article>
 </body>
 
 </html>
