--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Matematisk Modelering</title>
 </head>
 <header>
-<!-- im-container simply puts the img above the navigation elements so .nav is centered on page. -->
+<!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
 <div class="img-container"> 
         <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
     </div>
