detail-box struktur endring

--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@
         <h2>Bachelorprogram </h2>
         <section id="course-info">
             <div class="detail-box">
-                <p>
-                <h3>Studiested: </h3>Pilestredet i Oslo</p>
+                <h3>Studiested: </h3>
+                <p>Pilestredet i Oslo</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Varighet: </h3>3 år</p>
+                <h3>Varighet: </h3>
+                <p>3 år</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Omfang: </h3>Heltid</p>
+                <h3>Omfang: </h3>
+                <p>Heltid</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Studiepoeng: </h3>180</p>
+                <h3>Studiepoeng: </h3>
+                <p>180</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Studiestart: </h3>August</p>
+                <h3>Studiestart: </h3>
+                <p>August</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Undervisningsspråk: </h3>Norsk, Engelsk</p>
+                <h3>Undervisningsspråk: </h3>
+                <p>Norsk, Engelsk</p>
             </div>
             <div class="detail-box">
-                <p>
-                <h3>Studieplasser: </h3> 40 </p>
+                <h3>Studieplasser: </h3>
+                <p>40 </p>
             </div>
         </section>
         </article>
