--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="stylesheet/style.css">
     <title>Matematisk Modelering</title>
 </head>
+
 <header>
-    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+    <!-- img-container simply puts img above the navi elements so nav is centered on page. -->
     <div class="img-container">
         <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
     </div>
     <nav>
+        <!-- # to link to current page -->
         <ul class="nav-links">
-            <li><a href="Studier">Studier</a></li>
-            <li><a href="Forskningen vår">Forskningen vår</a></li>
-            <li><a href="Samarbeid">Samarbeid</a></li>
-            <li><a href="Universitetsbibliotek">Universitetsbibliotek</a></li>
-            <li><a href="Om Oslomet">Om Oslomet</a></li>
-            <li><a href="Kontakt">Kontakt</a></li>
-            <li><a href="For studenter">For studenter</a></li>
+            <li><a href="#">Studier</a></li>
+            <li><a href="#">Forskningen vår</a></li>
+            <li><a href="#">Samarbeid</a></li>
+            <li><a href="#">Universitetsbibliotek</a></li>
+            <li><a href="#">Om Oslomet</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">For studenter</a></li>
         </ul>
     </nav>
 </header>
