--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <link rel="stylesheet" href="stylesheet/style.css">
     <title>Matematisk Modelering</title>
 </head>
-
 <header>
-    <!-- img-container simply puts img above the navi elements so nav is centered on page. -->
+    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <div class="img-container">
         <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
     </div>
     <nav>
-        <!-- # to link to current page -->
         <ul class="nav-links">
             <li><a href="#">Studier</a></li>
             <li><a href="#">Forskningen vår</a></li>
-            <li><a href="#">Samarbeid</a></li>
             <li><a href="#">Universitetsbibliotek</a></li>
-            <li><a href="#">Om Oslomet</a></li>
-            <li><a href="#">Kontakt</a></li>
             <li><a href="#">For studenter</a></li>
+            <li><a href="Acitvity">Acitvity</a></li>
+            <li><a href="Accessibility">Accessibility</a></li>
+            <li><a href="GitHub">GitHub</a></li>
         </ul>
     </nav>
 </header>
@@ -61,7 +59,9 @@
                 <h3>Studieplasser: </h3> 40 </p>
             </div>
         </section>
-        </article>
+        <p>
+        <h4>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige oppgaver.</h4>
+        </p>
 </body>
 
 </html>
