Fix spelling in header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Forskningen vår</a></li>
             <li><a href="#">Universitetsbibliotek</a></li>
             <li><a href="#">For studenter</a></li>
-            <li><a href="Acitvity">Acitvity</a></li>
+            <li><a href="Activity">Acitvity</a></li>
             <li><a href="Accessibility">Accessibility</a></li>
             <li><a href="GitHub">GitHub</a></li>
         </ul>
