added links to other-pages in header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <li><a href="#">Forskningen vår</a></li>
             <li><a href="#">Universitetsbibliotek</a></li>
             <li><a href="#">For studenter</a></li>
-            <li><a href="Activity">Activity</a></li>
-            <li><a href="Accessibility">Accessibility</a></li>
-            <li><a href="GitHub">GitHub</a></li>
+            <li><a href="other-pages/activity.html">Activity</a></li>
+            <li><a href="other-pages/accessibility.html">Accessibility</a></li>
+            <li><a href="other-pages/github.html">GitHub</a></li>
         </ul>
     </nav>
 </header>
