--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="stylesheet/style.css">
+    <title>Matematisk Modelering</title>
 </head>
+<header>
+    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+    <div class="img-container">
+        <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
+    </div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Studier</a></li>
+            <li><a href="#">Forskningen vår</a></li>
+            <li><a href="#">Universitetsbibliotek</a></li>
+            <li><a href="#">For studenter</a></li>
+            <li><a href="other-pages/activity.html">Activity</a></li>
+            <li><a href="index.html">Matematisk Modellering</a></li>
+            <li><a href="other-pages/github.html">GitHub</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
-    
+
 </body>
+
 </html>
