fixed index links on diff pages.

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -18,7 +18,7 @@
             <li><a href="#">Forskningen vår</a></li>
             <li><a href="#">Universitetsbibliotek</a></li>
             <li><a href="#">For studenter</a></li>
-            <li><a href="index.html">Matematisk Modellering</a></li>
+            <li><a href="../index.html">Matematisk Modellering</a></li>
             <li><a href="other-pages/accessibility.html">Accessibility</a></li>
             <li><a href="other-pages/github.html">GitHub</a></li>
         </ul>
