--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -19,7 +19,7 @@
             <li><a href="#">Universitetsbibliotek</a></li>
             <li><a href="#">For studenter</a></li>
             <li><a href="other-pages/activity.html">Activity</a></li>
-            <li><a href="index.html">Matematisk Modellering</a></li>
+            <li><a href="../index.html">Matematisk Modellering</a></li>
             <li><a href="other-pages/github.html">GitHub</a></li>
         </ul>
     </nav>
