--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -20,7 +20,7 @@
             <li><a href="#">For studenter</a></li>
             <li><a href="other-pages/activity.html">Activity</a></li>
             <li><a href="other-pages/accessibility.html">Accessibility</a></li>
-            <li><a href="index.html">Matematisk Modellering</a></li>
+            <li><a href="../index.html">Matematisk Modellering</a></li>
         </ul>
     </nav>
 </header>
