FINALLY fixed links

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="../stylesheet/style.css">
     <title>Activity</title>
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <div class="img-container">
-        <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
+        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
     </div>
     <nav>
         <ul class="nav-links">
@@ -19,8 +19,8 @@
             <li><a href="#">Universitetsbibliotek</a></li>
             <li><a href="#">For studenter</a></li>
             <li><a href="../index.html">Matematisk Modellering</a></li>
-            <li><a href="other-pages/accessibility.html">Accessibility</a></li>
-            <li><a href="other-pages/github.html">GitHub</a></li>
+            <li><a href="accessibility.html">Accessibility</a></li>
+            <li><a href="github.html">GitHub</a></li>
         </ul>
     </nav>
 </header>
