added some content

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <body>
     <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
-        <h2>Bachelorprogram </h2>
-        <section id="course-info">
+        <h2>Bachelorprogram</h2>
+        <section id="course-summary">
             <div class="detail-box">
                 <p>
                 <h3>Studiested: </h3>Pilestredet i Oslo</p>
@@ -59,9 +59,22 @@
                 <h3>Studieplasser: </h3> 40 </p>
             </div>
         </section>
-        <p>
-        <h4>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige oppgaver.</h4>
-        </p>
+        <section id="course-info">
+            <h2>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
+                oppgaver.</h2>
+            <div class="general-spacer"></div>
+            <h2>Studiestart</h2>
+            <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på studiestartsiden for
+                matematisk modellering og datavitenskap - ingeniør (student.oslomet.no).
+                <br><br>
+                NB! Vær obs på at timeplanen som ligger på studiestartsiden er en timeplan for alle studentene på
+                kullet.
+                <br><br>
+                For å se din personlige timeplan må du logge deg inn på "Min side" (student.oslomet.no) etter at du har
+                aktivert IT-kontoen din og du er blitt plassert i klasse/gruppe. Dette skjer vanligvis uken før
+                studiestart.
+            </p>
+        </section>
 </body>
 
 </html>
