--- a/index.html
+++ b/index.html
@@ -130,26 +130,18 @@
 
             <ul class="media">
                 <li>
-                    <a href="#" class="fa fa-twitter">
-
-                    </a>
+                    <a href="#" class="fa fa-twitter"> </a>
                 </li>
 
                 <li>
-                    <a href="#" class="fa fa-facebook">
-
-                    </a>
+                    <a href="#" class="fa fa-facebook"></a>
                 </li>
                 
                 <li>
-                    <a href="#" class="fa fa-linkedin">
-
-                    </a>
+                    <a href="#" class="fa fa-linkedin"></a>
                 </li>
                 <li>
-                    <a href="#" class="fa fa-instagram">
-
-                    </a>
+                    <a href="#" class="fa fa-instagram"></a>
                 </li>
             </ul>
         </div>
