--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <p>40 </p>
             </div>
         </section>
+        <div class="general-spacer"></div>
         <section id="course-info">
+            <hr>
             <h2>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
                 oppgaver.</h2>
             <div class="general-spacer"></div>
@@ -75,10 +77,9 @@
                 aktivert IT-kontoen din og du er blitt plassert i klasse/gruppe. Dette skjer vanligvis uken før
                 studiestart.
             </p>
+            <hr>
         </section>
-        <p>
-        <h4>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige oppgaver.</h4>
-        </p>
+
     </section>
 
     <!-- Footer Menu -->
@@ -91,7 +92,7 @@
 
                     <span>
                         <h4>Oslo Metropolitan University</h4>
-                        <p>Storbyuniversitetet</p> 
+                        <p>Storbyuniversitetet</p>
                         Postboks 4, St. Olavs plass
                         0130 Oslo
                     </span>
@@ -101,27 +102,30 @@
                     <span id="icon" class="fa fa-phone"></span>
 
                     <span>
-                        <h4><a href="#">Kontakt oss</a></h4>
-                        Tlf.: 67 23 50 00
+                        <h4>Kontakt oss</h4>
+                        <p>Tlf.: 67 23 50 00</p>
                     </span>
                 </div>
 
                 <div id="col3">
                     <span id="icon" class="fa fa-info"></span>
                     <span>
-                        <h4> More Info</h4>                        
-                        English<br/>
-                        Alumni<br/>
-                        Ansatteoversikt<br/>
-                        Arrangementsoversikt<br/>
-                        For ansatte<br/>
-                        For studenter<br/>
-                        Ledige stillinger<br/>
-                        Personvernerklæring og informasjonskapslar<br/>
-                        Pressekontakt<br/>
-                        Tilgjengelegheitserklæring<br/>
-                        Admin
-                </span>
+                        <h4> More Info</h4>
+                        <p>
+                            <a class="more-info-links" href="#">English</a><br />
+                            <a class="more-info-links" href="#">Alumni</a><br />
+                            <a class="more-info-links" href="#">Ansatteoversikt</a><br />
+                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br />
+                            <a class="more-info-links" href="#">For ansatte</a><br />
+                            <a class="more-info-links" href="#">For studenter</a><br />
+                            <a class="more-info-links" href="#">Ledige stillinger</a><br />
+                            <a class="more-info-links" href="#">Personvernerklæring og informasjonskapslar</a><br />
+                            <a class="more-info-links" href="#">Pressekontakt</a><br />
+                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br />
+                            <a class="more-info-links" href="#">Admin</a><br />
+
+                        </p>
+                    </span>
                 </div>
             </div>
         </div>
@@ -130,18 +134,18 @@
 
             <ul class="media">
                 <li>
-                    <a href="#" class="fa fa-twitter"> </a>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter"> </a>
                 </li>
 
                 <li>
-                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a>
                 </li>
-                
+
                 <li>
-                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"></a>
                 </li>
                 <li>
-                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"></a>
                 </li>
             </ul>
         </div>
