--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
                     <span>
                         <h4> More Info</h4>
                         <p>
-                            <a class="more-info-links" href="#">English</a><br />
-                            <a class="more-info-links" href="#">Alumni</a><br />
-                            <a class="more-info-links" href="#">Ansatteoversikt</a><br />
-                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br />
-                            <a class="more-info-links" href="#">For ansatte</a><br />
-                            <a class="more-info-links" href="#">For studenter</a><br />
-                            <a class="more-info-links" href="#">Ledige stillinger</a><br />
-                            <a class="more-info-links" href="#">Personvernerklæring og informasjonskapslar</a><br />
-                            <a class="more-info-links" href="#">Pressekontakt</a><br />
-                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br />
-                            <a class="more-info-links" href="#">Admin</a><br />
+                            <a class="more-info-links" href="#">English</a><br>
+                            <a class="more-info-links" href="#">Alumni</a><br/>
+                            <a class="more-info-links" href="#">Ansatteoversikt</a><br>
+                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br>
+                            <a class="more-info-links" href="#">For ansatte</a><br>
+                            <a class="more-info-links" href="#">For studenter</a><br>
+                            <a class="more-info-links" href="#">Ledige stillinger</a><br>
+                            <a class="more-info-links" href="#">Personvernerklæring og <br> informasjonskapslar</a><br>
+                            <a class="more-info-links" href="#">Pressekontakt</a><br>
+                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br>
+                            <a class="more-info-links" href="#">Admin</a><br>
 
                         </p>
                     </span>
