minor footer adjustments and renaming

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <h4> More Info</h4>
                         <p>
                             <a class="more-info-links" href="#">English</a><br>
-                            <a class="more-info-links" href="#">Alumni</a><br>
+                            <a class="more-info-links" href="#">Alumni</a><br />
                             <a class="more-info-links" href="#">Ansatteoversikt</a><br>
                             <a class="more-info-links" href="#">Arrangementsoversikt</a><br>
                             <a class="more-info-links" href="#">For ansatte</a><br>
