--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
             <hr>
         </section>
 
+        <section id = "more-content">
+            <div class = more-content-boxes>
+                <h2>Studiested</h2>
+                <p class = "fa fa-long-arrow-right"></p>
+                <a href="https://www.oslomet.no/om/studiested-pilestredet"> Studiestedet Pilestredet</a>
+            </div>
+            <div class = more-content-boxes>
+                <h2>Spørsmål om utdannningen?</h2>
+                <p class = "fa fa-long-arrow-right"></p>
+                <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
+            </div>
+            <div class = more-content-boxes>
+                <h2>Faglig leder</h2>
+                <p class = "fa fa-long-arrow-right"></p>
+            </div>
+        </section>
+
     </section>
 
     <!-- Footer Menu -->
@@ -129,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <!-- Copyright Section -->
+        <!-- Social Media links -->
         <div class="mediabox">
 
             <ul class="media">
