--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram</h2>
-        <section id="course-summary">
+        <section id="course-key-points">
             <div class="detail-box">
                 <h3>Studiested: </h3>
                 <p>Pilestredet i Oslo</p>
@@ -80,20 +80,110 @@
             <hr>
         </section>
 
-        <section id = "more-content">
-            <div class = more-content-boxes>
+        <section id="course-info-tabs">
+            <h2 id="course-summary">Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske
+                og samfunnsnyttige
+                oppgaver.
+            </h2>
+
+            <div class="tab">
+                <button class="tablinks" onclick="openTab(event, 'Studiestart')">Studiestart</button>
+                <button class="tablinks" onclick="openTab(event, 'Opptakskrav og poeng')">Opptakskrav og poeng</button>
+                <button class="tablinks" onclick="openTab(event, 'Slik søker du')">Slik søker du</button>
+                <button class="tablinks" onclick="openTab(event, 'Hva lærer du?')">Hva lærer du?</button>
+                <button class="tablinks" onclick="openTab(event, 'Studiets oppbygging')">Studiets oppbygging</button>
+                <button class="tablinks" onclick="openTab(event, 'Hvordan foregår undervisningen?')">Hvordan foregår
+                    undervisningen?</button>
+                <button class="tablinks" onclick="openTab(event, 'Hva koster det?')">Hva koster det?</button>
+                <button class="tablinks" onclick="openTab(event, 'Hva kan du jobbe som?')">Hva kan du jobbe
+                    som?</button>
+                <button class="tablinks" onclick="openTab(event, 'Utveksling')">Utveksling</button>
+                <button class="tablinks" onclick="openTab(event, 'Videre studiemuligheter ved OsloMet')">Videre
+                    studiemuligheter ved OsloMet</button>
+            </div>
+
+            <div id="Studiestart" class="tabcontent">
+                <h3>Studiestart</h3>
+                <p>London is the capital city of England.</p>
+            </div>
+
+            <div id="Opptakskrav og poeng" class="tabcontent">
+                <h3>Opptakskrav og poeng</h3>
+                <p>Paris is the capital of France.</p>
+            </div>
+
+            <div id="Slik søker du" class="tabcontent">
+                <h3>Slik søker du</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Hva lærer du?" class="tabcontent">
+                <h3>Hva lærer du?</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Studiets oppbygging" class="tabcontent">
+                <h3>Studiets oppbygging</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Hvordan foregår undervisningen?" class="tabcontent">
+                <h3>Hvordan foregår undervisningen?</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Hva koster det?" class="tabcontent">
+                <h3>Hva koster det?</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Hva kan du jobbe som?" class="tabcontent">
+                <h3>Hva kan du jobbe som?</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Utveksling" class="tabcontent">
+                <h3>Utveksling</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <div id="Videre studiemuligheter ved OsloMet" class="tabcontent">
+                <h3>Videre studiemuligheter ved OsloMet</h3>
+                <p>Tokyo is the capital of Japan.</p>
+            </div>
+
+            <script>
+                function openTab(evt, tabName) {
+                    var i, tabcontent, tablinks;
+                    tabcontent = document.getElementsByClassName("tabcontent");
+                    for (i = 0; i < tabcontent.length; i++) {
+                        tabcontent[i].style.display = "none";
+                    }
+                    tablinks = document.getElementsByClassName("tablinks");
+                    for (i = 0; i < tablinks.length; i++) {
+                        tablinks[i].className = tablinks[i].className.replace(" active", "");
+                    }
+                    document.getElementById(tabName).style.display = "block";
+                    evt.currentTarget.className += " active";
+                }
+            </script>
+        </section>
+
+        <section id="more-content">
+            <div class=more-content-boxes>
                 <h2>Studiested</h2>
-                <p class = "fa fa-long-arrow-right"></p>
+                <p class="fa fa-long-arrow-right"></p>
                 <a href="https://www.oslomet.no/om/studiested-pilestredet"> Studiestedet Pilestredet</a>
             </div>
-            <div class = more-content-boxes>
+            <div class=more-content-boxes>
                 <h2>Spørsmål om utdannningen?</h2>
-                <p class = "fa fa-long-arrow-right"></p>
-                <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
+                <p class="fa fa-long-arrow-right"></p>
+                <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> Har du spørsmål om
+                    utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
             </div>
-            <div class = more-content-boxes>
+            <div class=more-content-boxes>
                 <h2>Faglig leder</h2>
-                <p class = "fa fa-long-arrow-right"></p>
+                <p class="fa fa-long-arrow-right"></p>
             </div>
         </section>
 
