--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 </header>
 
 <body>
+    <div class="video-container">
+        <iframe class="video" src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen title="Oslomet Dataingeiør og matematisk modellering"
+        loading="lazy">
+    </iframe>
+    </div>
     <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
         <h2>Bachelorprogram</h2>
