--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
     <div class="video-container">
-        <iframe class="video" src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen title="Oslomet Dataingeiør og matematisk modellering"
-        loading="lazy">
-    </iframe>
+        <iframe class="video" src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
+            allowfullscreen title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
+        </iframe>
     </div>
     <section id="main-content">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
@@ -89,7 +89,19 @@
 
             <div id="Studiestart" class="tabcontent">
                 <h3>Studiestart</h3>
-                <p>London is the capital city of England.</p>
+                <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a
+                        href="https://student.oslomet.no/en/bachelor-matematisk-modellering-datavitenskap">studiestartsiden
+                        for matematisk modellering og datavitenskap - ingeniør (student.oslomet.no)</a>.
+                </p>
+                <p>
+                    NB! Vær obs på at timeplanen som ligger på studiestartsiden er en timeplan for alle studentene på
+                    kullet.
+                </p>
+                <p>
+                    For å se din personlige timeplan må du logge deg inn på "Min side" (student.oslomet.no) etter at du
+                    har
+                    aktivert IT-kontoen din og du er blitt plassert i klasse/gruppe. Dette skjer vanligvis uken før
+                    studiestart.</p>
             </div>
 
             <div id="Opptakskrav og poeng" class="tabcontent">
@@ -137,21 +149,7 @@
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
-            <script>
-                function openTab(evt, tabName) {
-                    var i, tabcontent, tablinks;
-                    tabcontent = document.getElementsByClassName("tabcontent");
-                    for (i = 0; i < tabcontent.length; i++) {
-                        tabcontent[i].style.display = "none";
-                    }
-                    tablinks = document.getElementsByClassName("tablinks");
-                    for (i = 0; i < tablinks.length; i++) {
-                        tablinks[i].className = tablinks[i].className.replace(" active", "");
-                    }
-                    document.getElementById(tabName).style.display = "block";
-                    evt.currentTarget.className += " active";
-                }
-            </script>
+            <script src="javascript/index-tabs"></script>
         </section>
 
         <hr>
