changed size and position of video in css. Made max-width 75% of page, and height (padding-bottom) 42.1875% to get a 16:9 aspect ratio.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </header>
 
 <body>
+    <div class="general-spacer"></div>
     <div class="video-container">
         <iframe class="video" src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
             allowfullscreen title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
