added more info on studiestart

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <div id="Studiestart" class="tabcontent">
                 <h3>Studiestart</h3>
-                <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a
+                <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a class="course-info-links"
                         href="https://student.oslomet.no/en/bachelor-matematisk-modellering-datavitenskap">studiestartsiden
                         for matematisk modellering og datavitenskap - ingeniør (student.oslomet.no)</a>.
                 </p>
@@ -99,7 +99,7 @@
                     kullet.
                 </p>
                 <p>
-                    For å se din personlige timeplan må du logge deg inn på "Min side" (student.oslomet.no) etter at du
+                    For å se din personlige timeplan må du logge deg inn på <a class="course-info-links" href="https://student.oslomet.no/en/"> "Min side" (student.oslomet.no)</a> etter at du
                     har
                     aktivert IT-kontoen din og du er blitt plassert i klasse/gruppe. Dette skjer vanligvis uken før
                     studiestart.</p>
