--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
             <div id="Studiestart" class="tabcontent">
                 <h3>Studiestart</h3>
-                <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a class="course-info-links"
+                <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a
+                        class="course-info-links"
                         href="https://student.oslomet.no/en/bachelor-matematisk-modellering-datavitenskap">studiestartsiden
                         for matematisk modellering og datavitenskap - ingeniør (student.oslomet.no)</a>.
                 </p>
@@ -99,7 +100,8 @@
                     kullet.
                 </p>
                 <p>
-                    For å se din personlige timeplan må du logge deg inn på <a class="course-info-links" href="https://student.oslomet.no/en/"> "Min side" (student.oslomet.no)</a> etter at du
+                    For å se din personlige timeplan må du logge deg inn på <a class="course-info-links"
+                        href="https://student.oslomet.no/en/"> "Min side" (student.oslomet.no)</a> etter at du
                     har
                     aktivert IT-kontoen din og du er blitt plassert i klasse/gruppe. Dette skjer vanligvis uken før
                     studiestart.</p>
@@ -107,7 +109,27 @@
 
             <div id="Opptakskrav og poeng" class="tabcontent">
                 <h3>Opptakskrav og poeng</h3>
-                <p>Paris is the capital of France.</p>
+                <p>For å søke på dette programmet må du ha:
+                <ul>
+                    <li>
+                        <a class="course-info-links"
+                            href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/">Generell
+                            studiekompetanse (samordnaopptak.no)</a> eller <a class="course-info-links"
+                            href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior">oppfylle
+                            kravene til realkompetanse</a>
+                    </li>
+                    <li>Matematikk R1 og R2</li>
+                    <li>Fysikk 1</li>
+                </ul>
+                </p>
+                <p>
+                    Det kan være konkurranse om plassene. Ved forrige opptak kom alle kvalifiserte søkere inn.
+                </p>
+                <p>
+                    Hvis du mangler generell studiekompetanse eller enkelte fag fra videregående skole, kan du søke på
+                    dette
+                    studiet om du har bestått ettårig forkurs for ingeniørutdanning.
+                </p>
             </div>
 
             <div id="Slik søker du" class="tabcontent">
