added content to Slik søker du

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
 
             <div id="Studiestart" class="tabcontent">
-                <h3>Studiestart</h3>
+                <h2>Studiestart</h2>
                 <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a
                         class="course-info-links"
                         href="https://student.oslomet.no/en/bachelor-matematisk-modellering-datavitenskap">studiestartsiden
@@ -108,7 +108,7 @@
             </div>
 
             <div id="Opptakskrav og poeng" class="tabcontent">
-                <h3>Opptakskrav og poeng</h3>
+                <h2>Opptakskrav og poeng</h2>
                 <p>For å søke på dette programmet må du ha:
                 <ul>
                     <li>
@@ -133,42 +133,48 @@
             </div>
 
             <div id="Slik søker du" class="tabcontent">
-                <h3>Slik søker du</h3>
-                <p>Tokyo is the capital of Japan.</p>
+                <h2>Slik søker du</h2>
+                <p>Du søker på Samordna opptak med studiekode 215 503.
+                <ul>
+                    <li>15. april: ordinær søknadsfrist</li>
+                    <li>1. mars: frist for enkelte søkere</li>
+                </ul>
+                <a class="course-info-links" href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å søke på bachelor.</a>  
+            </p>
             </div>
 
             <div id="Hva lærer du?" class="tabcontent">
-                <h3>Hva lærer du?</h3>
+                <h2>Hva lærer du?</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Studiets oppbygging" class="tabcontent">
-                <h3>Studiets oppbygging</h3>
+                <h2>Studiets oppbygging</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Hvordan foregår undervisningen?" class="tabcontent">
-                <h3>Hvordan foregår undervisningen?</h3>
+                <h2>Hvordan foregår undervisningen?</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Hva koster det?" class="tabcontent">
-                <h3>Hva koster det?</h3>
+                <h2>Hva koster det?</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Hva kan du jobbe som?" class="tabcontent">
-                <h3>Hva kan du jobbe som?</h3>
+                <h2>Hva kan du jobbe som?</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Utveksling" class="tabcontent">
-                <h3>Utveksling</h3>
+                <h2>Utveksling</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
             <div id="Videre studiemuligheter ved OsloMet" class="tabcontent">
-                <h3>Videre studiemuligheter ved OsloMet</h3>
+                <h2>Videre studiemuligheter ved OsloMet</h2>
                 <p>Tokyo is the capital of Japan.</p>
             </div>
 
