--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
             </div>
         </section>
 
-        <section id="course-info-tabs">
-            <h2 id="course-summary">Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske
+        <section id="course-summary">
+            <h2>Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske
                 og samfunnsnyttige
                 oppgaver.
+            </h2>
+        </section>
+
+        <section id="course-info-tabs">
             </h2>
             <div class="tab">
                 <button class="tablinks" onclick="openTab(event, 'Studiestart')">Studiestart</button>
@@ -139,13 +143,67 @@
                     <li>15. april: ordinær søknadsfrist</li>
                     <li>1. mars: frist for enkelte søkere</li>
                 </ul>
-                <a class="course-info-links" href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å søke på bachelor.</a>  
-            </p>
+                <a class="course-info-links"
+                    href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å søke
+                    på bachelor.</a>
+                </p>
             </div>
 
             <div id="Hva lærer du?" class="tabcontent">
                 <h2>Hva lærer du?</h2>
-                <p>Tokyo is the capital of Japan.</p>
+                <p>
+                <p>Bachelor i matematisk modellering og datavitenskap kobler sammen matematikk, informatikk, fysikk og
+                    statistikk.</p>
+
+                <p>Du får innsikt i matematiske modeller som brukes i praktisk problemløsning blant annet i medisinsk
+                    kjemi, biologiske prosesser og ulike samfunnssystemer.</p>
+
+                <p>Det første studieåret har du emner i blant annet matematikk, programmering, fysikk og kjemi for å få
+                    en felles forståelse av tematikken.</p>
+
+                <p>Det siste semesteret skriver du en bacheloroppgave tett knyttet til problemstillinger i
+                    arbeidslivet.</p>
+
+                <p>Første året velger du hvilken av disse spesialiseringene du vil ta.</p>
+
+
+                <p>
+                <h3 class="subheader-tabcontent">Statistiske og datadrevne metoder</h3>
+                Du lærer om hvordan du kan bruke målte data koblet med datadrevne og statistiske metoder til å gjøre
+                beregninger, for eksempel av fremtidige strømpriser.</p>
+
+                <p>Du lærer hvordan du kan løse komplekse og sammensatte problemer, og utforske høydimensjonale
+                    datatyper. Moderne metoder innen maskinlæring og kunstig intelligens står sentralt.</p>
+
+
+                <p>
+                <h3 class="subheader-tabcontent">Vitenskapelige beregninger</h3>
+                Du lærer å lage effektive algoritmer, datastrukturer og kildekoder for å løse matematiske og fysiske
+                problemer med numeriske metoder.</p>
+                <p>
+                    Du lærer å utvikle kildekode og metodikk knyttet til medisinsk teknologi, biologiske prosesser og
+                    annet.
+                </p>
+
+                <p>
+                <h3 class="subheader-tabcontent">Matematikk og fysikk</h3>
+                Du utforsker algebraiske strukturer, blant annet knyttet til dyp læring og kunstig intelligens.</p>
+
+                <p>Du lærer differensialgeometri på flater, gruppeteori og kodeteori; matematiske strukturer,
+                    representasjonsteori og kategoriteori.</p>
+
+                <p>I fysikk lærer du om termodynamikk og statistisk fysikk.</p>
+                </p>
+                <p>
+                    <a class="course-info-links"
+                        href="https://student.oslomet.no/en/studier/-/studieinfo/programplan/HINGMAMO/2024/H%C3%98ST">
+                        <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                            viewBox="0 -5 24 24">
+                            <polygon
+                                points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                        </svg>
+                        Se programplan på student.oslomet.no</a>
+                </p>
             </div>
 
             <div id="Studiets oppbygging" class="tabcontent">
