--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <body>
     <div class="general-spacer"></div>
     <div class="video-container">
-        <iframe class="video" src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
+        <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
             allowfullscreen title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
+            <!--URL to film from https://www.oslomet.no/studier/tkd/matematisk-modellering-datavitenskap inspection --> 
         </iframe>
     </div>
     <section id="main-content">
