--- a/index.html
+++ b/index.html
@@ -176,58 +176,94 @@
             <h2>Kanskje du også er interessert i disse?</h2>
             <table id="studies">
                 <tr>
-                    <th>Studienavn</th>
-                    <th>Utdanningsgrad</th>
-                    <th>Studiested</th>
-                    <th>Omfang</th>
+                    <th colspan="4">
+                        <div class="header-row">
+                            <span>Studienavn</span>
+                            <span>Utdanningsgrad</span>
+                            <span>Studiested</span>
+                            <span>Omfang</span>
+                        </div>
+                    </th>
                 </tr>
                 <tr>
-                    <td><a href="#">Anvendt Datateknologi</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Anvendt Datateknologi</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Bioteknologi- og kjemiingeniør</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Bioteknologi- og kjemiingeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Byggingeniør</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Byggingeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Dataingeniør</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Dataingeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Elektronikkingeniør</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Elektronikkingeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Informasjonsteknologi</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Informasjonsteknologi</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Maskiningeniør</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Maskiningeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="#">Tre-terminsordning til ingeniørutdanning</a></td>
-                    <td><p>Bachelorprogram</p></td>
-                    <td>Pilestredet i Oslo</td>
-                    <td>Heltid</td>
+                    <td colspan="4">
+                        <a href="#" class="row-link">
+                            <span>Tre-terminsordning til ingeniør</span>
+                            <span>Bachelorprogram</span>
+                            <span>Pilestredet i Oslo</span>
+                            <span>Heltid</span>
+                        </a>
+                    </td>
                 </tr>
             </table>
         </section>
