Changed links in table from hashtags

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="row-link">
                             <span>Anvendt Datateknologi</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -197,7 +197,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="row-link">
                             <span>Bioteknologi- og kjemiingeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -207,7 +207,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="row-link">
                             <span>Byggingeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -217,7 +217,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="row-link">
                             <span>Dataingeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -227,7 +227,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="row-link">
                             <span>Elektronikkingeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="row-link">
                             <span>Informasjonsteknologi</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -247,7 +247,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="row-link">
                             <span>Maskiningeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
@@ -257,7 +257,7 @@
                 </tr>
                 <tr>
                     <td colspan="4">
-                        <a href="#" class="row-link">
+                        <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="row-link">
                             <span>Tre-terminsordning til ingeniør</span>
                             <span>Bachelorprogram</span>
                             <span>Pilestredet i Oslo</span>
