more-content-boxes finished

--- a/index.html
+++ b/index.html
@@ -266,7 +266,12 @@
                 </div>
                 <div class=more-content-boxes>
                     <h2>Faglig leder</h2>
-                    <p class="fa fa-long-arrow-right"></p>
+                <img id="img-krhel3944" src="https://gw-oslomet.intark.uh-it.no/ansattbilde/krhel3944" alt="Bilde av Kristoffer Herland Hellton">
+                <div id="person-text">
+                    <h3>Kristoffer Herland Hellton</h3>
+                    <p>førsteamanuensis</p>
+                        <p>+47 673 37 240 <span class ="divider">| </span> kristoffer.hellton@oslomet.no</p>
+                </div>
                 </div>
             </section>
             <section id="other-studies">
