--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheet/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>GitHub</title>
 </head>
 <header>
@@ -26,6 +27,75 @@
 </header>
 
 <body>
+    
+    <!-- Footer Menu -->
+    <footer id="footer">
+
+        <div class="moreInfo">
+            <div class="row">
+                <div id="col1">
+                    <span id="icon" class="fa fa-map-marker"></span>
+
+                    <span>
+                        <h4>Oslo Metropolitan University</h4>
+                        <p>Storbyuniversitetet</p>
+                        Postboks 4, St. Olavs plass
+                        0130 Oslo
+                    </span>
+                </div>
+
+                <div id="col2">
+                    <span id="icon" class="fa fa-phone"></span>
+
+                    <span>
+                        <h4>Kontakt oss</h4>
+                        <p>Tlf.: 67 23 50 00</p>
+                    </span>
+                </div>
+
+                <div id="col3">
+                    <span id="icon" class="fa fa-info"></span>
+                    <span>
+                        <h4> More Info</h4>
+                        <p>
+                            <a class="more-info-links" href="#">English</a><br>
+                            <a class="more-info-links" href="#">Alumni</a><br />
+                            <a class="more-info-links" href="#">Ansatteoversikt</a><br>
+                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br>
+                            <a class="more-info-links" href="#">For ansatte</a><br>
+                            <a class="more-info-links" href="#">For studenter</a><br>
+                            <a class="more-info-links" href="#">Ledige stillinger</a><br>
+                            <a class="more-info-links" href="#">Personvernerklæring og <br> informasjonskapslar</a><br>
+                            <a class="more-info-links" href="#">Pressekontakt</a><br>
+                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br>
+                            <a class="more-info-links" href="#">Admin</a><br>
+
+                        </p>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <!-- Social Media links -->
+        <div class="mediabox">
+
+            <ul class="media">
+                <li>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter"> </a>
+                </li>
+
+                <li>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a>
+                </li>
+
+                <li>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 
