removed general-spacer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 </header>
 
 <body>
-    <div class="general-spacer"></div>
     <div class="video-container">
         <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen
             title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
@@ -36,7 +35,7 @@
     </div>
     <section id="main">
         <h1>Matematisk modellering og datavitenskap - ingeniør </h1>
-        <section class="main-content">
+        <section id="main-content">
             <h2>Bachelorprogram</h2>
             <section id="course-key-points">
                 <div class="detail-box">
